--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -89,6 +89,17 @@
                         attrs="{'invisible': [('folio_id','=',False)]}"
                     >
                         <button
+                            name="preview_reservation"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-globe icon"
+                        >
+                            <div class="o_field_widget o_stat_info">
+                                <span class="o_stat_text">Customer</span>
+                                <span class="o_stat_text">Preview</span>
+                            </div>
+                        </button>
+                        <button
                             type="object"
                             class="oe_stat_button"
                             icon="fa-file"
