--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -552,6 +552,7 @@
                             <div class="row">
                                 <div class="col-6">
                                     <group>
+                                        <field name="user_id" />
                                         <field name="pms_property_id" />
                                         <field name="localizator" />
                                         <field name="overbooking" />
@@ -581,6 +582,7 @@
             </form>
         </field>
     </record>
+
     <!-- Calendar -->
     <record id="pms_reservation_view_calendar" model="ir.ui.view">
         <field name="name">pms.reservation.view.calendar</field>
@@ -592,10 +594,12 @@
                 string="Reservations"
                 quick_add="False"
                 mode="month"
+                color="room_type_id"
                 scales="week,month,year"
             >
+                <field name="room_type_id" filters="1" />
+                <field name="preferred_room_id" filters="1" />
                 <field name="partner_id" avatar_field="image_128" />
-                <field name="room_type_id" />
                 <field name="rooms" />
             </calendar>
         </field>
@@ -636,11 +640,7 @@
                 <field name="ratio_checkin_data" widget="progressbar" optional="show" />
                 <field name="overbooking" invisible="1" />
                 <field name="activity_ids" widget="list_activity" optional="show" />
-                <field
-                    name="create_uid"
-                    optional="show"
-                    widget="many2one_avatar_user"
-                />
+                <field name="user_id" optional="show" widget="many2one_avatar_user" />
                 <!-- <field name="origin" /> -->
                 <field name="checkin_partner_ids" invisible="1" />
                 <field name="to_assign" invisible="1" />
@@ -726,7 +726,7 @@
             <xpath expr="//field[@name='folio_pending_amount']" position="attributes">
                 <attribute name="invisible">True</attribute>
             </xpath>
-            <xpath expr="//field[@name='create_uid']" position="attributes">
+            <xpath expr="//field[@name='user_id']" position="attributes">
                 <attribute name="invisible">True</attribute>
             </xpath>
         </field>
@@ -742,7 +742,7 @@
                 <filter
                     string="My Reservations"
                     name="my_reservations"
-                    domain="[('create_uid', '=', uid)]"
+                    domain="[('user_id', '=', uid)]"
                 />
                 <filter
                     string="Cancelled"
@@ -864,7 +864,7 @@
                         string="Created By"
                         domain="[]"
                         name="created_by"
-                        context="{'group_by':'create_uid'}"
+                        context="{'group_by':'user_id'}"
                     />
                 </group>
                 <searchpanel>
